# vibuttonctrl

./: CMakeLists.txt  CMakePresets.json  README.md  codecoverage.sh
core/: CMakeLists.txt
core/src/: vibuttonctrl.c
core/src/inc/: vibuttonctrl.h  vibuttonctrl_private.h
tests/: tst_vibuttonctrl.c
tests/main/: main.c
